js/src/tests/test262/built-ins/NativeErrors/SyntaxError/name.js
assert
.
sameValue
(
SyntaxError
.
name
"
SyntaxError
"
)
;
verifyNotEnumerable
(
SyntaxError
"
name
"
)
;
verifyNotWritable
(
SyntaxError
"
name
"
)
;
verifyConfigurable
(
SyntaxError
"
name
"
)
;
reportCompare
(
0
0
)
;
